tags word wrap fix

--- a/angular-todo/src/app/pages/main/elements/todoList/tagContainer/tagContainer.component.scss
+++ b/angular-todo/src/app/pages/main/elements/todoList/tagContainer/tagContainer.component.scss
@@ -6,6 +6,7 @@
     @media screen and (max-width:map-get($grid-breakpoints, md)){
         max-width:40px;
     }
+    margin-bottom:4px;
     max-height:50px;
     overflow:hidden;
     white-space:nowrap; 
@@ -19,4 +20,12 @@
     white-space:nowrap; 
     word-break:keep-all;
     text-align:center;
+}
+.tag-container{
+	display:flex;
+	align-items:center;
+	flex-direction:row;
+	flex-wrap: wrap;
+	height:100%;
+	overflow:hidden;
 }
